--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1012,7 +1012,7 @@ body {
   line-height: 1.625;
   font-family: 'Raleway', "HelveticaNeue-Light", 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 20px;
   font-size: 0.875rem;
   background-color: #f1f1f1;
 }
@@ -1276,10 +1276,10 @@ object {
   clear: both;
 }
 .site-header a {
-  color: #e1e1e1;
+  color: #2b2b2b;
 }
 .site-header a:hover {
-  color: #2b2b2b;
+  color: #f48282;
 }
 .site-header h1 {
   padding: 0 0 15px;
