--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1326,7 +1326,7 @@ object {
   width: 320px;
   width: 20rem;
   margin: 0 auto;
-  color: #f48282;
+  color: #2b2b2b;
   padding: 0 0 10px;
 }
 .site-header .site-bio a {
