--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1030,7 +1030,7 @@ h6 {
   color: #363636;
   font-family: 'Raleway', "HelveticaNeue-Light", 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4;
-  font-weight: 100;
+  font-weight: bold;
 }
 h1.title,
 h2.title,
