--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1250,6 +1250,22 @@ iframe,
 object {
   max-width: 100%;
 }
+.rainbow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-image: url(http://postachio-themes.s3-website-us-east-1.amazonaws.com/9562113794afcc565e7860bb5e926db4/assets/images/rainbow-bg.png);
+  background-repeat: repeat-x;
+  background-size: 55%;
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 1000;
+}
 .site-header,
 .site-footer,
 .blog-pagination {
