--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1276,7 +1276,7 @@ object {
   width: 100%;
   padding: 30px 0 10px;
   text-align: center;
-  background-color: #9ee6c2;
+  background-color: #85b7f0;
 }
 .site-header:after {
   visibility: hidden;
