--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1292,7 +1292,7 @@ object {
   clear: both;
 }
 .site-header a {
-  color: #2b2b2b;
+  color: #ffffff;
 }
 .site-header a:hover {
   color: #f48282;
