--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1295,7 +1295,7 @@ object {
   color: #ffffff;
 }
 .site-header a:hover {
-  color: #f48282;
+  color: #fba4a4;
 }
 .site-header h1 {
   padding: 0 0 15px;
@@ -1342,7 +1342,7 @@ object {
   width: 320px;
   width: 20rem;
   margin: 0 auto;
-  color: #2b2b2b;
+  color: #ffffff;
   padding: 0 0 10px;
 }
 .site-header .site-bio a {
