--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1295,7 +1295,7 @@ object {
   color: #ffffff;
 }
 .site-header a:hover {
-  color: #fba4a4;
+  color: #eeb9b9;
 }
 .site-header h1 {
   padding: 0 0 15px;
@@ -1343,7 +1343,7 @@ object {
   width: 20rem;
   margin: 0 auto;
   color: #ffffff;
-  padding: 0 0 10px;
+  padding: 0 0 14px;
 }
 .site-header .site-bio a {
   border-bottom: 1px dotted #e1e1e1;
