--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1372,6 +1372,71 @@ object {
 .nav-menu > li > a.active {
   color: #707070;
 }
+/* Sidebar Widgets */
+.widget {
+  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
+  background: #ffffff;
+  padding: 0;
+  border-bottom: solid #d7d7d7;
+  border-bottom-width: 2px;
+  border-bottom-width: 0.125rem;
+}
+.widget ul {
+  list-style-type: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.widget ul > li {
+  padding: 7px 0;
+  margin: 0;
+  border-bottom: solid #d7d7d7;
+  border-bottom-width: 1px;
+  border-bottom-width: 0.0625rem;
+}
+.widget ul > li:last-child {
+  border: 0;
+}
+.widget-title {
+  padding: 15px;
+  padding: 0.9375rem;
+  font-weight: normal;
+  color: #252525;
+  background: #ffffff;
+  text-align: center;
+}
+.widget-title a {
+  color: inherit;
+}
+.widget-content {
+  margin: 0;
+  padding: 0 15px 15px;
+}
+.widget-tagcloud ul:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.widget-tagcloud ul:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.widget-tagcloud ul > li {
+  margin-right: 6px;
+  margin-right: 0.375rem;
+  margin-bottom: 6px;
+  margin-bottom: 0.375rem;
+  padding: 0;
+  float: left;
+  font-size: 12px;
+  font-size: 0.75rem;
+  border: 0;
+}
 /* Footer */
 .site-footer {
   padding: 30px 0;
